[gd_scene load_steps=19 format=3 uid="uid://b8216p2013ptk"]

[ext_resource type="PackedScene" path="res://Objects/UI/PlayerPanel/UnitPanel.tscn" id="2"]
[ext_resource type="Script" path="res://Objects/CombatGrid/CombatStartButton.gd" id="5"]
[ext_resource type="Script" path="res://Objects/CombatGrid/ActingMenu.gd" id="6"]
[ext_resource type="Script" path="res://Classes/ButtonStateChange.gd" id="7"]
[ext_resource type="Script" path="res://Classes/TurnManager.gd" id="8"]
[ext_resource type="Script" path="res://Objects/CombatGrid/ActionsMenu.gd" id="9"]
[ext_resource type="Script" path="res://Objects/CombatGrid/StatusHint.gd" id="10"]
[ext_resource type="Script" path="res://Objects/CombatGrid/PauseMenu/PauseMenu.gd" id="11"]
[ext_resource type="Script" path="res://Objects/CombatGrid/Grid.gd" id="13"]
[ext_resource type="Script" path="res://Objects/UI/MainCamera.gd" id="16"]
[ext_resource type="Script" path="res://Objects/UI/UI.gd" id="17"]
[ext_resource type="Script" path="res://Objects/CombatGrid/Main.gd" id="18"]
[ext_resource type="Script" path="res://Objects/UI/UnitList/UnitList.gd" id="19"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5bash"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_88rcu"]
sky_material = SubResource("ProceduralSkyMaterial_5bash")

[sub_resource type="Environment" id="Environment_q32dv"]
background_mode = 2
sky = SubResource("Sky_88rcu")
ambient_light_color = Color(1, 1, 1, 1)
glow_enabled = true

[sub_resource type="SphereMesh" id="1"]

[sub_resource type="PlaneMesh" id="2"]

[node name="Main" type="Node3D"]
script = ExtResource("18")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_q32dv")

[node name="DebugMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
visible = false
mesh = SubResource("1")

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4834, 0)
pixel_size = 0.03
text = "TEST"

[node name="Grid" type="GridMap" parent="."]
cell_size = Vector3(0.32, 0.16, 0.32)
script = ExtResource("13")

[node name="DebugHoveredTile" type="Label3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07888, 0)
billboard = 2
text = "ASS"

[node name="MapObjs" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.228094, 0)

[node name="Sprite3D" type="Sprite3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.398513, 0)
visible = false

[node name="ChosenCellVisual" type="MeshInstance3D" parent="Grid"]
transform = Transform3D(0.16, 0, 0, 0, 1, 0, 0, 0, 0.16, 0, 0.715041, 0)
mesh = SubResource("2")

[node name="CameraOrigin" type="Node3D" parent="Grid"]
script = ExtResource("16")

[node name="Camera" type="Camera3D" parent="Grid/CameraOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.815421, 0.578869, 0, -0.578869, 0.815421, 0.114, 2.44982, 2.19134)
current = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("17")
__meta__ = {
"_edit_vertical_guides_": [512.0]
}

[node name="ActionsMenu" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = -1
anchor_top = 0.16
anchor_right = 0.16
anchor_bottom = 1.0
script = ExtResource("9")
collapseSignal = "COMBAT_exit"

[node name="ActingMenu" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = -1
anchor_top = 0.16
anchor_right = 0.16
anchor_bottom = 1.0
script = ExtResource("6")

[node name="Move" type="Button" parent="UI/ActingMenu"]
layout_mode = 2
text = "UI_COMBAT_MOVE"
script = ExtResource("7")
stateToAffect = 1
combatState = 1

[node name="Act" type="Button" parent="UI/ActingMenu"]
layout_mode = 2
text = "UI_COMBAT_ACT"
script = ExtResource("7")
stateToAffect = 1
combatState = 2

[node name="EndTurn" type="Button" parent="UI/ActingMenu"]
layout_mode = 2
text = "UI_COMBAT_ENDTURN"
script = ExtResource("7")
stateToAffect = 1
combatState = 4

[node name="TurnManager" type="HBoxContainer" parent="UI"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.155
script = ExtResource("8")

[node name="UnitList" type="Panel" parent="UI"]
anchors_preset = -1
anchor_top = 0.16
anchor_right = 0.2
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("19")

[node name="ScrollContainer" type="ScrollContainer" parent="UI/UnitList"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="List" type="GridContainer" parent="UI/UnitList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartCombatButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
text = "UI_START"
script = ExtResource("5")
mainState = 1
freeOnSignal = "SETUP_exit"

[node name="InfoDisplay" parent="UI" instance=ExtResource("2")]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8

[node name="StatusHint" type="Label" parent="UI"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.07
text = "ASS"
script = ExtResource("10")

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 2
visible = false
script = ExtResource("11")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.364706)

[node name="Buttons" type="GridContainer" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75

[node name="Resume" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resume"

[node name="LowPriorityTimer" type="Timer" parent="."]
wait_time = 0.08
autostart = true
